After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685565 - GLib-GIO-CRITICAL **: g_dbus_connection_register_object: assertion `object_path != NULL && g_variant_is_object_path (object_path)' failed
GLib-GIO-CRITICAL **: g_dbus_connection_register_object: assertion `object_pa...
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
2.98
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-05 14:08 UTC by Paul Menzel
Modified: 2012-10-10 12:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Paul Menzel 2012-10-05 14:08:51 UTC
Starting self-built Rhythmbox 2.98 under Debian Sid/unstable under GNOME 3 and Tracker miners running, the following message is printed to the terminal.

    GLib-GIO-CRITICAL **: g_dbus_connection_register_object: assertion `object_path != NULL && g_variant_is_object_path (object_path)' failed

Here is the backtrace. If the cdparanoia debugging symbols are needed I am happy to recreate the trace.

Starting program: /usr/bin/rhythmbox -D --debug
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/i686/cmov/libthread_db.so.1".
[New Thread 0xb2badb70 (LWP 27083)]
[New Thread 0xada37b70 (LWP 27084)]
[New Thread 0xab8d8b70 (LWP 27085)]
[Thread 0xab8d8b70 (LWP 27085) exited]
[New Thread 0xab8d8b70 (LWP 27086)]
[New Thread 0xaa83ab70 (LWP 27087)]
[Thread 0xab8d8b70 (LWP 27086) exited]
[New Thread 0xaa039b70 (LWP 27088)]
[Thread 0xaa039b70 (LWP 27088) exited]
[Thread 0xaa83ab70 (LWP 27087) exited]
[New Thread 0xaa83ab70 (LWP 27089)]
[New Thread 0xaa039b70 (LWP 27093)]
[Thread 0xaa039b70 (LWP 27093) exited]
[New Thread 0xab8d8b70 (LWP 27104)]
[New Thread 0xa2d39b70 (LWP 27105)]

(rhythmbox:27068): GLib-GIO-CRITICAL **: g_dbus_connection_register_object: assertion `object_path != NULL && g_variant_is_object_path (object_path)' failed

Program received signal SIGINT, Interrupt.
0xb7fe1424 in __kernel_vsyscall ()

(gdb) t a a bt f

Thread 1 (Thread 0xb2fa1af0 (LWP 27068))

  • #0 __kernel_vsyscall
  • #1 raise
    at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c line 42
  • #2 rb_debug_stop_in_debugger
    at rb-debug.c line 282
  • #3 log_handler
  • #4 g_logv
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmessages.c line 733
  • #5 g_log
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmessages.c line 792
  • #6 g_return_if_fail_warning
  • #7 g_dbus_connection_register_object
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gio/gdbusconnection.c line 4957
  • #8 register_object
    at rb-dbus-media-server-plugin.c line 168
  • #9 register_source_container
    at rb-dbus-media-server-plugin.c line 1800
  • #10 display_page_inserted_cb
    at rb-dbus-media-server-plugin.c line 2317
  • #11 display_page_inserted_cb
    at rb-dbus-media-server-plugin.c line 2301
  • #12 ffi_call_SYSV
    from /usr/lib/i386-linux-gnu/libffi.so.5
  • #13 ffi_call
    from /usr/lib/i386-linux-gnu/libffi.so.5
  • #14 g_cclosure_marshal_generic
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 1454
  • #15 g_closure_invoke
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 777
  • #16 signal_emit_unlocked_R
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3551
  • #17 g_signal_emit_valist
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3300
  • #18 g_signal_emit
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3356
  • #19 rb_display_page_model_add_page
    at rb-display-page-model.c line 674
  • #20 rb_shell_append_display_page
    at rb-shell.c line 2421
  • #21 rb_shell_playlist_added_cb
    at rb-shell.c line 2429
  • #22 g_cclosure_marshal_VOID__OBJECT
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gmarshal.c line 1272
  • #23 g_closure_invoke
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 777
  • #24 signal_emit_unlocked_R
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3551
  • #25 g_signal_emit_valist
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3300
  • #26 g_signal_emit
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3356
  • #27 append_new_playlist_source
    at rb-playlist-manager.c line 401
  • #28 rb_playlist_manager_load_playlists
    at rb-playlist-manager.c line 457
  • #29 idle_handle_load_complete
    at rb-shell.c line 2919
  • #30 g_idle_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 4657
  • #31 g_main_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 2539
  • #32 g_main_context_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3075
  • #33 g_main_context_iterate
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3146
  • #34 g_main_context_iteration
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3207
  • #35 g_application_run
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gio/gapplication.c line 1499
  • #36 main
    at main.c line 98

Thread 1 (Thread 0xb2fa1af0 (LWP 27068))

  • #0 __kernel_vsyscall
  • #1 raise
    at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c line 42
  • #2 rb_debug_stop_in_debugger
    at rb-debug.c line 282
  • #3 log_handler
  • #4 g_logv
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmessages.c line 733
  • #5 g_log
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmessages.c line 792
  • #6 g_return_if_fail_warning
  • #7 g_dbus_connection_register_object
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gio/gdbusconnection.c line 4957
  • #8 register_object
    at rb-dbus-media-server-plugin.c line 182
  • #9 register_source_container
    at rb-dbus-media-server-plugin.c line 1800
  • #10 display_page_inserted_cb
    at rb-dbus-media-server-plugin.c line 2317
  • #11 display_page_inserted_cb
    at rb-dbus-media-server-plugin.c line 2301
  • #12 ffi_call_SYSV
    from /usr/lib/i386-linux-gnu/libffi.so.5
  • #13 ffi_call
    from /usr/lib/i386-linux-gnu/libffi.so.5
  • #14 g_cclosure_marshal_generic
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 1454
  • #15 g_closure_invoke
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 777
  • #16 signal_emit_unlocked_R
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3551
  • #17 g_signal_emit_valist
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3300
  • #18 g_signal_emit
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3356
  • #19 rb_display_page_model_add_page
    at rb-display-page-model.c line 674
  • #20 rb_shell_append_display_page
    at rb-shell.c line 2421
  • #21 rb_shell_playlist_added_cb
    at rb-shell.c line 2429
  • #22 g_cclosure_marshal_VOID__OBJECT
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gmarshal.c line 1272
  • #23 g_closure_invoke
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 777
  • #24 signal_emit_unlocked_R
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3551
  • #25 g_signal_emit_valist
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3300
  • #26 g_signal_emit
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3356
  • #27 append_new_playlist_source
    at rb-playlist-manager.c line 401
  • #28 rb_playlist_manager_load_playlists
    at rb-playlist-manager.c line 457
  • #29 idle_handle_load_complete
    at rb-shell.c line 2919
  • #30 g_idle_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 4657
  • #31 g_main_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 2539
  • #32 g_main_context_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3075
  • #33 g_main_context_iterate
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3146
  • #34 g_main_context_iteration
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3207
  • #35 g_application_run
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gio/gapplication.c line 1499
  • #36 main
    at main.c line 98

Thread 1 (Thread 0xb2fa1af0 (LWP 27068))

  • #0 __kernel_vsyscall
  • #1 raise
    at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c line 42
  • #2 rb_debug_stop_in_debugger
    at rb-debug.c line 282
  • #3 log_handler
  • #4 g_logv
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmessages.c line 733
  • #5 g_log
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmessages.c line 792
  • #6 g_return_if_fail_warning
  • #7 g_dbus_connection_register_object
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gio/gdbusconnection.c line 4957
  • #8 register_object
    at rb-dbus-media-server-plugin.c line 168
  • #9 register_source_container
    at rb-dbus-media-server-plugin.c line 1800
  • #10 display_page_inserted_cb
    at rb-dbus-media-server-plugin.c line 2317
  • #11 display_page_inserted_cb
    at rb-dbus-media-server-plugin.c line 2301
  • #12 ffi_call_SYSV
    from /usr/lib/i386-linux-gnu/libffi.so.5
  • #13 ffi_call
    from /usr/lib/i386-linux-gnu/libffi.so.5
  • #14 g_cclosure_marshal_generic
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 1454
  • #15 g_closure_invoke
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 777
  • #16 signal_emit_unlocked_R
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3551
  • #17 g_signal_emit_valist
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3300
  • #18 g_signal_emit
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3356
  • #19 rb_display_page_model_add_page
    at rb-display-page-model.c line 674
  • #20 rb_shell_append_display_page
    at rb-shell.c line 2421
  • #21 rb_shell_playlist_added_cb
    at rb-shell.c line 2429
  • #22 g_cclosure_marshal_VOID__OBJECT
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gmarshal.c line 1272
  • #23 g_closure_invoke
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gclosure.c line 777
  • #24 signal_emit_unlocked_R
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3551
  • #25 g_signal_emit_valist
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3300
  • #26 g_signal_emit
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gobject/gsignal.c line 3356
  • #27 append_new_playlist_source
    at rb-playlist-manager.c line 401
  • #28 rb_playlist_manager_load_playlists
    at rb-playlist-manager.c line 457
  • #29 idle_handle_load_complete
    at rb-shell.c line 2919
  • #30 g_idle_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 4657
  • #31 g_main_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 2539
  • #32 g_main_context_dispatch
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3075
  • #33 g_main_context_iterate
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3146
  • #34 g_main_context_iteration
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./glib/gmain.c line 3207
  • #35 g_application_run
    at /build/buildd-glib2.0_2.33.12+really2.32.4-1-i386-ht9QHK/glib2.0-2.33.12+really2.32.4/./gio/gapplication.c line 1499
  • #36 main
    at main.c line 98

Program received signal SIGINT, Interrupt.
0xb7fe1424 in __kernel_vsyscall ()
Continuing.
[New Thread 0xab8d8b70 (LWP 27284)]
[New Thread 0xa24e1b70 (LWP 27285)]
[Thread 0xa24e1b70 (LWP 27285) exited]
[New Thread 0xa1ce0b70 (LWP 27287)]
[New Thread 0xa14dfb70 (LWP 27288)]
[New Thread 0xa0cdeb70 (LWP 27289)]
[New Thread 0xa04ddb70 (LWP 27290)]
[New Thread 0x9fcdcb70 (LWP 27291)]
[Thread 0xaa83ab70 (LWP 27089) exited]
[Thread 0xa14dfb70 (LWP 27288) exited]
[Thread 0xa1ce0b70 (LWP 27287) exited]
[Thread 0xa0cdeb70 (LWP 27289) exited]
[Thread 0xa04ddb70 (LWP 27290) exited]
[Thread 0x9fcdcb70 (LWP 27291) exited]
[New Thread 0x9fcdcb70 (LWP 27327)]
[Thread 0x9fcdcb70 (LWP 27327) exited]
[Thread 0xab8d8b70 (LWP 27284) exited]
[Thread 0xa2d39b70 (LWP 27105) exited]
[Thread 0xada37b70 (LWP 27084) exited]
[Thread 0xb2badb70 (LWP 27083) exited]
[Inferior 1 (process 27068) exited normally]
quit
Comment 1 Jonathan Matthew 2012-10-10 11:27:20 UTC
fixed in commit c92be6e
Comment 2 Paul Menzel 2012-10-10 12:18:53 UTC
(In reply to comment #1)
> fixed in commit c92be6e

Thanks as always for the quick solution [1]. For the next commits could you please also paste the errors into the commit message. That would be much appreciated for people looking through the commit log and not knowing what extent the fixed error had. I know you paste the Bugzilla bug URL, but it is not made a clickable link in cgit [1] and never will be one for people using plain `git log`.

Thanks again!

[1] http://git.gnome.org/browse/rhythmbox/commit/?id=c92be6e8ee97be5cb526817645dad50b1857d8c6