dbus-media-server: fix object path formatting

negative numbers don't work so well, so format things unsigned.

https://bugzilla.gnome.org/show_bug.cgi?id=685565